# tbsmproduction

./: .dockerignore  .env.example  .env.local  .gitattributes  .gitignore  .migrations_backup.sql  DEPLOY.md  README.md  _bom_info.json  _sheet_names.json  docker-compose.prod.yaml  docker-compose.yaml  install_openpyxl.sh  package-lock.json  package.json  pyproject.toml
.claude/: settings.json  settings.local.json
Document/: 1.BoM_Master_Summary.xlsx
config/: asgi.py  urls.py  wsgi.py
core/: admin.py  apps.py  decorators.py  signals.py  urls.py
deploy/: docker-compose.yml
docker/: Dockerfile  Dockerfile.local  entrypoint.prod.sh
scripts/: deploy_seed.ps1  deploy_seed.sh  extract_bom.py  file_dialog_server.py  fix_count_detect_visibility.py  fix_inspection_modal.py  fix_upload_ui.py  start_file_dialog_server.bat
static/: user_import_template.csv
templates/: about.html  add-production.html  add_production.html  add_user.html  auditlog.html  base.html  bom_template.html  bom_tree.html  contact.html  dashboard.html  email_receiver.html  footer.html  header.html  index.html  item_list.html  login.html  manage-scrap.html  manage_address_partner.html  manage_bill_of_material.html  manage_businesspartner.html  manage_contact.html  manage_defectmode.html  manage_defectmodecategory.html  manage_item_category.html  manage_item_line.html  manage_item_list.html  manage_item_stage.html  manage_line.html  manage_line_edit.html  manage_production.html  manage_requests.html  manage_scrap.html  manage_settings.html  manage_settings_defect_by_category.html  manage_user.html  (+14 more)
(+392 files in other folders)
