[tool.poetry]
name = "Fluke dev"
version = "0.1.0"
description = ""
authors = ["Flukey268"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
psycopg = {extras = ["binary"], version = "^3.3.2"}
django-tailwind = "^4.4.2"
pillow = "^12.1.0"
openpyxl = "^3.1.5"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"